GG-8770 Create linux style start-stop script bin/include/service.sh   - made refactoring;